# aml-fastboot

./: .gitignore  CMakeLists.txt  README.md
src/: classes.hpp  main.cpp  main.hpp  socialclub.cpp  socialclub.hpp  startmode.cpp  startmode.hpp
src/java/: ForceFullScreen.java  GTASA.java  RemoveSocialClub.java  generate_classes_header.sh
